Editted Heading and hero

--- a/0-index.html
+++ b/0-index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <header class="header">
+      <input type="checkbox" class="menu-btn" id="menu-btn" />
+      <label for="menu-btn" class="menu-icon"
+        ><span class="navicon"></span
+      ></label>
       <img
         src="images/logo_headphones.png"
         alt="Image of 'Headphones' webpage logo"
@@ -30,24 +34,20 @@
     </header>
     <main>
       <section class="hero-section">
-        <div class="container">
-          <div class="hero__text">
-            <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit</p>
-          </div>
-          <div class="hero__btn">
-            <button class="btn-primary">call to action</button>
-          </div>
-          <div class="hero__desription">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nam
-              blanditiis labore fugit? Quo aliquid similique accusamus nobis? Et
-              laudantium sapiente magni asperiores? Blanditiis est deserunt
-              facere accusamus doloremque quis esse alias voluptatibus harum
-              veritatis aperiam quo aliquid maxime repellat, sint dicta autem
-              vitae numquam distinctio iste soluta laboriosam animi?
-            </p>
-          </div>
+        <div class="hero__container">
+          <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
+          <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit</p>
+
+          <button class="btn-primary">call to action</button>
+
+          <p class="hero__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nam
+            blanditiis labore fugit? Quo aliquid similique accusamus nobis? Et
+            laudantium sapiente magni asperiores? Blanditiis est deserunt facere
+            accusamus doloremque quis esse alias voluptatibus harum veritatis
+            aperiam quo aliquid maxime repellat, sint dicta autem vitae numquam
+            distinctio iste soluta laboriosam animi?
+          </p>
         </div>
       </section>
     </main>
