Created Our results section

--- a/2-index.html
+++ b/2-index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.cdnfonts.com/css/spin-cycle" rel="stylesheet" />
     <link rel="stylesheet" href="icons/holberton_school-icon/demo-files/demo.css">
     <link rel="stylesheet" href="icons/holberton_school-icon/style.css"></head>
-    <link rel="stylesheet" href="1-styles.css" />
+    <link rel="stylesheet" href="2-styles.css" />
     <title>Headphones</title>
   </head>
   <body>
@@ -66,18 +66,46 @@
         </div>
         <ul class="cards-list">
           <li><span class="holberton_school-icon-ic_sound"></span>
-          <h3>Lorem ipsum</h3>
+          <h3>Lorem ipsum</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p></li>
         <li><span class="holberton_school-icon-ic_video"></span>
-          <h3>Lorem ipsum</h3>
+          <h3>Lorem ipsum</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p></li>
         <li><span class="holberton_school-icon-ic_music"></span>
-          <h3>Lorem ipsum</h3>
+          <h3>Lorem ipsum</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p></li>
         <li><span class="holberton_school-icon-ic_hearing"></span>
-          <h3>Lorem ipsum</h3>
+          <h3>Lorem ipsum</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p></li>
 
+        </ul>
+      </section>
+       <!-- Our results -->
+       <section class="results" id="results">
+        <div class="results__text">
+          <h2>Our results speak for themseves</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum velit
+            cupiditate praesentium. Dicta libero iure pariatur ratione magni,
+            tempore ullam nihil ut sapiente aspernatur reprehenderit est, ab
+            aliquam consequuntur esse odio alias quaerat sunt voluptates?
+            Corporis quisquam beatae molestiae eos earum culpa, voluptate omnis
+            a, ab voluptates accusamus, cum cumque!
+          </p>
+        </div>
+        <ul class="cards-list">
+          <li>
+          <h3>+2%</h3>
+        <p>Lorem ipsum dolor</p></li>
+        <li>
+          <h3>+2%</h3>
+        <p>Lorem ipsum dolor</p></li>
+        <li>
+          <h3>+2%</h3>
+        <p>Lorem ipsum dolor</p></li>
+        <li>
+          <h3>+2%</h3>
+        <p>Lorem ipsum dolor</p></li>
         </ul>
       </section>
      
