Footer created, project essentials completed

--- a/3-index.html
+++ b/3-index.html
@@ -140,6 +140,17 @@
         </form>
       </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <img src="images/logo_headphones.png" alt="Logo of Headphones webpage">
+            <div class="social">
+                <span class="holberton_school-icon-ic_facebook"></span>
+                <span class="holberton_school-icon-ic_instagram"></span>
+                <span class="holberton_school-icon-ic_twitter"></span>
+            </div>
+        </div>
+        <small>&copy;headphones 2020</small>
+    </footer>
     <script src="icons/holberton_school-icon/demo-files/demo.js"></script>
   </body>
 </html>
