Improved animation in what we do and in our results sections

--- a/101-index.html
+++ b/101-index.html
@@ -54,7 +54,7 @@
       </section>
       <section class="about" id="about">
         <div class="about__text">
-          <h2>What we do...</h2>
+          <h2 tabindex="0">What we do...</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum velit
             cupiditate praesentium. Dicta libero iure pariatur ratione magni,
@@ -94,18 +94,22 @@
           </p>
         </div>
         <ul class="cards-list">
+          <div class="card-wrap">
           <li>
           <h3>+2%</h3>
-        <p>Lorem ipsum dolor</p></li>
+        <p>Lorem ipsum dolor</p></li></div>
+            <div class="card-wrap">
+        <li>          
+          <h3>+2%</h3>
+        <p>Lorem ipsum dolor</p></li></div>
+        <div class="card-wrap">
+        <li>          
+          <h3>+2%</h3>
+        <p>Lorem ipsum dolor</p></li></div>
+        <div class="card-wrap">
         <li>
           <h3>+2%</h3>
-        <p>Lorem ipsum dolor</p></li>
-        <li>
-          <h3>+2%</h3>
-        <p>Lorem ipsum dolor</p></li>
-        <li>
-          <h3>+2%</h3>
-        <p>Lorem ipsum dolor</p></li>
+        <p>Lorem ipsum dolor</p></li></div>
         </ul>
       </section>
       <section class="contact" id="contact">
